--- a/css/styles.css
+++ b/css/styles.css
@@ -101,18 +101,28 @@
 .tech-row{
     padding: 1% 15%;
 }
+#gallery{
+    text-align: center;
+}
 
 .gallery-head{
     text-align: center;
     padding-top: 2cm;
 }
 .gallery-row{
-    padding: 1.4cm 3cm 2cm;
+    padding-top: 1.4cm;
+    padding-bottom: 2cm;
+    /* padding: 1.4cm 3cm 2cm; */
+    align-items: center;
 }
 .gallery-dis{
     font-size:x-large;
     text-align: center;
     font-weight: 500;
+    padding-top: 0.5cm;
+}
+.gallery-col{
+    align-items: center;
 }
 
 
