--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,10 @@
     text-align: center;
     font-weight: 500;
 }
+
+.button-link{
+    padding: 0 0 0 0;
+}
 .projects-inner-head{
     font-size: 1rem;
     color: wheat;
